# flickr-to-sqlite

./: .gitignore  Makefile  README.md  pyproject.toml
flickr_to_sqlite/: cli.py
flickr_to_sqlite/service/: albums.py  database.py  photos_metadata.py  utils.py
tests/: fixtures.py  test_cli.py
tests/service/: test_albums.py  test_database.py  test_photos_metadata.py  test_utils.py
